--- a/gallery/gallery02/index.html
+++ b/gallery/gallery02/index.html
@@ -6,16 +6,9 @@ active: gallery
 header-img: "img/gallery-bg.jpg"
 album-title: "my 2nd album"
 images:
- - image_path: /gallery/archive/g02/bg1.jpg
+ - image_path: /gallery/archive/g02/food.jpg
    caption: IMAGE TITLE
-   mfp-title: IMAGE TITLE
-   copyright: © photorama
- - image_path: /gallery/archive/g02/bg2.jpg
-   caption: IMAGE TITLE
-   copyright: © photorama
- - image_path: /gallery/archive/g02/bg3.jpg
-   caption: IMAGE TITLE
-   copyright: © photorama
+   copyright: c me
 ---
 
 <html class="no-js" lang="en">
