--- a/gallery/gallery02/index.html
+++ b/gallery/gallery02/index.html
@@ -4,7 +4,7 @@ title: "album"
 description: "masonry"
 active: gallery
 header-img: "img/gallery-bg.jpg"
-album-title: "my 2nd album"
+album-title: "Katya Eats Food"
 images:
  - image_path: /gallery/archive/g02/food.jpg
    caption: IMAGE TITLE
